--- a/test/unittest/ability_service_extension_test/BUILD.gn
+++ b/test/unittest/ability_service_extension_test/BUILD.gn
@@ -57,6 +57,7 @@ ohos_unittest("ability_service_extension_test") {
     "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "hilog:libhilog",
