--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -180,7 +180,7 @@ ohos_shared_library("abilityms") {
     "window_manager:libwsutils",
     "window_manager:scene_session",
     "window_manager:sms",
-    "window_manager::libmodal_system_ui_extension_client"
+    "window_manager:libmodal_system_ui_extension_client"
   ]
 
   if (background_task_mgr_continuous_task_enable) {
