--- a/test/unittest/ability_service_extension_test/BUILD.gn
+++ b/test/unittest/ability_service_extension_test/BUILD.gn
@@ -20,6 +20,7 @@ ohos_unittest("ability_service_extension_test") {
 
   include_dirs = [
     "${ability_runtime_test_path}/mock/frameworks_kits_ability_native_test/include",
+    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_bundle_manager_helper",
     "${ability_runtime_path}/interfaces/kits/native/appkit/app",
     "${ability_runtime_path}/interfaces/kits/native/ability/native",
     "${ability_runtime_native_path}/runtime",
@@ -44,6 +45,7 @@ ohos_unittest("ability_service_extension_test") {
     "${ability_runtime_native_path}/ability/native:ability_thread",
     "${ability_runtime_native_path}/ability/native:service_extension",
     "${ability_runtime_native_path}/appkit:app_context",
+    "${ability_runtime_native_path}/appkit:appkit_manager_helper",
     "${ability_runtime_native_path}/appkit:appkit_native",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
@@ -64,6 +66,7 @@ ohos_unittest("ability_service_extension_test") {
     "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "napi:ace_napi",
+    "samgr:samgr_proxy",
   ]
 
   if (ability_runtime_graphics) {
