IssueNo: #I8R4AZ Description: add extension blocklist Sig: SIG_ApplicaitonFramework Feature or Bugfix: Feature Binary Source: No
Signed-off-by: xuanfeng8 <lifeng54@huawei.com>

--- a/frameworks/native/ability/native/etc/extension_blocklist_config.json
+++ b/frameworks/native/ability/native/etc/extension_blocklist_config.json
@@ -160,7 +160,8 @@
             "prompt",
             "promptAction",
             "window",
-            "system.prompt"
+            "system.prompt",
+            "hms.core.liveview.liveViewManager"
         ],
         "DriverExtension": [
             "abilityAccessCtrl",
@@ -277,7 +278,8 @@
             "prompt",
             "promptAction",
             "window",
-            "system.prompt"
+            "system.prompt",
+            "hms.core.liveview.liveViewManager"
         ],
         "RemoteLocationExtension": [
             "notification",
