--- a/frameworks/native/appkit/BUILD.gn
+++ b/frameworks/native/appkit/BUILD.gn
@@ -79,6 +79,7 @@ config("appkit_public_config") {
   if (ability_runtime_graphics) {
     include_dirs += [
       "${global_path}/i18n/frameworks/intl/include",
+      "${graphic_path}/frameworks/opengl_wrapper/src/EGL",
       "//third_party/icu/icu4c/source/common",
     ]
 
