--- a/frameworks/native/appkit/BUILD.gn
+++ b/frameworks/native/appkit/BUILD.gn
@@ -79,7 +79,6 @@ config("appkit_public_config") {
   if (ability_runtime_graphics) {
     include_dirs += [
       "${global_path}/i18n/frameworks/intl/include",
-      "${graphic_path}/frameworks/opengl_wrapper/src/EGL",
       "//third_party/icu/icu4c/source/common",
     ]
 
@@ -107,6 +106,10 @@ ohos_shared_library("appkit_native") {
     "${ability_runtime_services_path}/abilitymgr/include",
     "${ability_runtime_napi_path}/inner/napi_common",
   ]
+
+  if (ability_runtime_graphics) {
+    include_dirs += [ "${graphic_path}/frameworks/opengl_wrapper/src/EGL" ]
+  }
 
   configs = [
     ":appkit_config",
