--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -1,4 +1,4 @@
-#  Copyright (c) 2021-2023 Huawei Device Co., Ltd.
+#  Copyright (c) 2021-2024 Huawei Device Co., Ltd.
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
 #  You may obtain a copy of the License at
@@ -321,7 +321,7 @@ RESTART_PROCESS_BY_SAME_APP:
   PROCESS_NAME: {type: STRING, desc: process name}
   BUNDLE_NAME: {type: STRING, desc: bundle name}
 
-START_STANDARD_ABILITYS:
+START_STANDARD_ABILITIES:
   __BASE: {type: BEHAVIOR, level: MINOR, tag: PowerStats, desc: start more than one standard ability}
   USER_ID: {type: INT32, desc: userId}
   BUNDLE_NAME: {type: STRING, desc: bundle name}
