--- a/test/unittest/frameworks_kits_appkit_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_appkit_native_test/BUILD.gn
@@ -77,6 +77,7 @@ ohos_unittest("context_deal_interface_test") {
     "c_utils:utils",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
@@ -137,6 +138,7 @@ ohos_unittest("application_test") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
     "resource_management:global_resmgr",
@@ -186,6 +188,7 @@ ohos_unittest("context_container_test") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
@@ -247,6 +250,7 @@ ohos_unittest("context_deal_test") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
     "resource_management:global_resmgr",
@@ -301,6 +305,7 @@ ohos_unittest("application_impl_test") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
@@ -413,6 +418,7 @@ ohos_unittest("ability_stage_test") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
     "resource_management:global_resmgr",
@@ -461,6 +467,7 @@ ohos_unittest("form_extension_context_test") {
     "form_fwk:form_manager",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
     "samgr:samgr_proxy",
@@ -515,6 +522,7 @@ ohos_unittest("bms_context_impl_test") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
     "resource_management:global_resmgr",
@@ -553,6 +561,7 @@ ohos_unittest("context_container_by_mock_bms_test") {
     "c_utils:utils",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
