--- a/test/unittest/ams_service_event_drive_test/BUILD.gn
+++ b/test/unittest/ams_service_event_drive_test/BUILD.gn
@@ -87,6 +87,7 @@ ohos_unittest("AmsServiceEventDriveTest") {
     "init:libbeget_proxy",
     "ipc:ipc_core",
     "kv_store:distributeddata_inner",
+    "memmgr:memmgrclient",
     "memory_utils:libmeminfo",
   ]
 
