保存同步记录
Signed-off-by: huzeshan <huzeshan@huawei.com>
Change-Id: Ia3f55bd3ab62f0080a6224f07f5993707ba98a2c
Signed-off-by: huzeshan <huzeshan@huawei.com>

--- a/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
@@ -27,6 +27,7 @@ ohos_moduletest("AppRunningProcessesInfoModuleTest") {
   ]
 
   sources = [
+    "${ability_runtime_services_path}/appmgr/src/cache_process_manager.cpp",
     "${ability_runtime_test_path}/mock/common/src/mock_native_token.cpp",
     "app_running_processes_info_module_test.cpp",
   ]
