--- a/services/appmgr/BUILD.gn
+++ b/services/appmgr/BUILD.gn
@@ -56,6 +56,7 @@ ohos_shared_library("libappms") {
     "src/app_running_status_module.cpp",
     "src/app_spawn_client.cpp",
     "src/app_state_observer_manager.cpp",
+    "src/cache_process_manager.cpp",
     "src/child_process_record.cpp",
     "src/module_running_record.cpp",
     "src/quick_fix_callback_with_record.cpp",
