--- a/test/moduletest/common/ams/app_recent_list_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_recent_list_test/BUILD.gn
@@ -22,7 +22,10 @@ ohos_moduletest("AmsAppRecentListModuleTest") {
     "${ability_runtime_test_path}/mock/services_appmgr_test/include",
     "${ability_runtime_path}/interfaces/kits/native/appkit/ability_bundle_manager_helper",
   ]
-  sources = [ "ams_app_recent_list_module_test.cpp" ]
+  sources = [
+    "${ability_runtime_services_path}/appmgr/src/cache_process_manager.cpp",
+    "ams_app_recent_list_module_test.cpp",
+  ]
 
   deps = [
     "${ability_runtime_native_path}/ability/native:abilitykit_native",
