--- a/test/moduletest/common/ams/app_service_flow_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_service_flow_test/BUILD.gn
@@ -24,7 +24,10 @@ ohos_moduletest("AmsAppServiceFlowModuleTest") {
     "${ability_runtime_test_path}/mock/services_appmgr_test/include",
   ]
 
-  sources = [ "ams_app_service_flow_module_test.cpp" ]
+  sources = [
+    "${ability_runtime_services_path}/appmgr/src/cache_process_manager.cpp",
+    "ams_app_service_flow_module_test.cpp",
+  ]
 
   deps = [
     "${ability_runtime_native_path}/ability/native:abilitykit_native",
