--- a/test/moduletest/common/ams/service_start_process_test/BUILD.gn
+++ b/test/moduletest/common/ams/service_start_process_test/BUILD.gn
@@ -24,7 +24,10 @@ ohos_moduletest("AmsServiceStartModuleTest") {
     "${ability_runtime_path}/interfaces/kits/native/appkit/ability_bundle_manager_helper",
   ]
 
-  sources = [ "ams_service_start_process_module_test.cpp" ]
+  sources = [
+    "${ability_runtime_services_path}/appmgr/src/cache_process_manager.cpp",
+    "ams_service_start_process_module_test.cpp",
+  ]
 
   deps = [
     "${ability_runtime_native_path}/appkit:appkit_manager_helper",
