--- a/test/unittest/cache_process_manager_test/BUILD.gn
+++ b/test/unittest/cache_process_manager_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2024 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -14,25 +14,35 @@
 import("//build/test.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
-module_output_path = "ability_runtime/mstappmgrservice"
+module_output_path = "ability_runtime/appmgrservice"
 
-ohos_moduletest("AmsIpcAppmgrModuleTest") {
+ohos_unittest("cache_process_manager_test") {
   module_out_path = module_output_path
-
+  cflags_cc = []
   include_dirs = [
-    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_bundle_manager_helper",
-    "${ability_runtime_test_path}/mock/services_appmgr_test/include",
+    "${ability_runtime_innerkits_path}/ability_manager/include/",
+    "${ability_runtime_services_path}/appmgr/include/",
   ]
 
   sources = [
     "${ability_runtime_services_path}/appmgr/src/cache_process_manager.cpp",
-    "ams_ipc_app_mgr_module_test.cpp",
+    "cache_process_manager_test.cpp",
   ]
 
+  configs = [ "${ability_runtime_test_path}/unittest:appmgr_test_config" ]
+  cflags = []
+
   deps = [
-    "${ability_runtime_native_path}/appkit:appkit_manager_helper",
+    "${ability_runtime_innerkits_path}/app_manager:app_manager",
+    "${ability_runtime_innerkits_path}/deps_wrapper:ability_deps_wrapper",
+    "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
+    "${ability_runtime_services_path}/appmgr:libappms",
+    "${ability_runtime_services_path}/common:event_report",
     "${ability_runtime_services_path}/common:perm_verification",
-    "${ability_runtime_test_path}/moduletest/common/ams:appmgr_mst_source",
+    "${ability_runtime_services_path}/common:task_handler_wrap",
+    "${windowmanager_path}/utils:libwmutil_static",
+    "//third_party/googletest:gmock_main",
+    "//third_party/googletest:gtest_main",
   ]
 
   external_deps = [
@@ -61,13 +71,21 @@ ohos_moduletest("AmsIpcAppmgrModuleTest") {
     "window_manager:libwsutils",
   ]
 
-  if (background_task_mgr_continuous_task_enable) {
-    external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
+  defines = [ "AMS_LOG_TAG = \"AppMgrService\"" ]
+
+  if (ability_command_for_test) {
+    defines += [ "ABILITY_COMMAND_FOR_TEST" ]
+  }
+
+  if (ability_runtime_graphics) {
+    external_deps += [
+      "window_manager:libwm",
+      "window_manager:libwsutils",
+    ]
   }
 }
 
-group("moduletest") {
+group("unittest") {
   testonly = true
-
-  deps = [ ":AmsIpcAppmgrModuleTest" ]
+  deps = [ ":cache_process_manager_test" ]
 }
