--- a/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
@@ -876,6 +876,7 @@ ohos_unittest("service_extension_module_loader_test") {
   module_out_path = module_output_path
   include_dirs = [
     "${ability_runtime_test_path}/mock/frameworks_kits_ability_native_test/include",
+    "${ability_runtime_path}/interfaces/inner_api/ability_manager/include",
     "${ability_runtime_path}/interfaces/kits/native/ability/native",
   ]
 
@@ -2333,8 +2334,10 @@ ohos_unittest("abilityruntime_test") {
 ohos_unittest("form_extension_module_loader_test") {
   module_out_path = module_output_path
 
-  include_dirs =
-      [ "${ability_runtime_path}/interfaces/kits/native/ability/native" ]
+  include_dirs = [
+    "${ability_runtime_path}/interfaces/inner_api/ability_manager/include",
+    "${ability_runtime_path}/interfaces/kits/native/ability/native",
+  ]
 
   sources = [
     "${ability_runtime_native_path}/ability/native/form_extension_module_loader.cpp",
