--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -647,7 +647,6 @@ ohos_shared_library("form_extension") {
 }
 
 ohos_shared_library("form_extension_module") {
-
   include_dirs = [
     "${ability_runtime_path}/interfaces/inner_api/ability_manager/include",
     "${ability_runtime_path}/interfaces/kits/native/ability/native",
@@ -816,7 +815,7 @@ ohos_shared_library("data_ability_helper") {
 ohos_shared_library("service_extension_module") {
   include_dirs = [
     "${ability_runtime_path}/interfaces/inner_api/ability_manager/include",
-    "${ability_runtime_path}/interfaces/kits/native/ability/native"
+    "${ability_runtime_path}/interfaces/kits/native/ability/native",
   ]
 
   sources = [ "${ability_runtime_native_path}/ability/native/service_extension_module_loader.cpp" ]
