--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -391,6 +391,7 @@ group("unittest") {
     "app_mgr_service_inner_test:unittest",
     "app_mgr_service_test:unittest",
     "app_mgr_stub_test:unittest",
+    "app_preloader_test:unittest",
     "app_recovery_test:unittest",
     "app_running_manager_test:unittest",
     "app_running_processes_info_test:unittest",
