--- a/test/unittest/app_running_processes_info_test/BUILD.gn
+++ b/test/unittest/app_running_processes_info_test/BUILD.gn
@@ -32,6 +32,7 @@ ohos_unittest("AppRunningProcessesInfoTest") {
     "${ability_runtime_services_path}/appmgr/src/app_config_data_manager.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_debug_manager.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_mgr_service_inner.cpp",
+    "${ability_runtime_services_path}/appmgr/src/app_preloader.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_running_record.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_running_status_module.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_spawn_client.cpp",
