move memmgr_plugin to memmgr_override
Signed-off-by: zhoumengjie <zhoumengjie7@huawei.com>
Change-Id: I3393f497be31180f3a6fec1cb6bedd64ed1e296e

--- a/test/unittest/ams_app_workflow_test/BUILD.gn
+++ b/test/unittest/ams_app_workflow_test/BUILD.gn
@@ -85,7 +85,7 @@ ohos_unittest("AmsWorkFlowTest") {
   }
 
   if (ability_runtime_use_memmgr_plugin) {
-    external_deps += [ "memmgr_plugin:memmgrclient" ]
+    external_deps += [ "memmgr_override:memmgrclient" ]
   } else if (ability_runtime_use_memmgr) {
     external_deps += [ "memmgr:memmgrclient" ]
   }
