--- a/test/unittest/ams_recent_app_list_test/BUILD.gn
+++ b/test/unittest/ams_recent_app_list_test/BUILD.gn
@@ -100,7 +100,7 @@ ohos_unittest("AmsRecentAppListTest") {
   }
 
   if (ability_runtime_use_memmgr_plugin) {
-    external_deps += [ "memmgr_plugin:memmgrclient" ]
+    external_deps += [ "memmgr_override:memmgrclient" ]
   } else if (ability_runtime_use_memmgr) {
     external_deps += [ "memmgr:memmgrclient" ]
   }
