--- a/test/unittest/ams_service_app_spawn_client_test/BUILD.gn
+++ b/test/unittest/ams_service_app_spawn_client_test/BUILD.gn
@@ -94,7 +94,7 @@ ohos_unittest("AmsServiceAppSpawnClientTest") {
   }
 
   if (ability_runtime_use_memmgr_plugin) {
-    external_deps += [ "memmgr_plugin:memmgrclient" ]
+    external_deps += [ "memmgr_override:memmgrclient" ]
   } else if (ability_runtime_use_memmgr) {
     external_deps += [ "memmgr:memmgrclient" ]
   }
