--- a/test/unittest/app_running_processes_info_test/BUILD.gn
+++ b/test/unittest/app_running_processes_info_test/BUILD.gn
@@ -90,7 +90,7 @@ ohos_unittest("AppRunningProcessesInfoTest") {
   }
 
   if (ability_runtime_use_memmgr_plugin) {
-    external_deps += [ "memmgr_plugin:memmgrclient" ]
+    external_deps += [ "memmgr_override:memmgrclient" ]
   } else if (ability_runtime_use_memmgr) {
     external_deps += [ "memmgr:memmgrclient" ]
   }
