解决moduletest编译问题
Signed-off-by: huzeshan <huzeshan@huawei.com>

--- a/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
@@ -45,6 +45,7 @@ ohos_moduletest("AppRunningProcessesInfoModuleTest") {
     "bundle_framework:appexecfwk_base",
     "ffrt:libffrt",
     "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
   ]
