--- a/test/moduletest/common/ams/ability_running_record_test/BUILD.gn
+++ b/test/moduletest/common/ams/ability_running_record_test/BUILD.gn
@@ -39,6 +39,7 @@ ohos_moduletest("AmsAbilityRunningRecordModuleTest") {
     "ffrt:libffrt",
     "hicollie:libhicollie",
     "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
   ]
