--- a/test/moduletest/common/ams/app_mgr_service_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_mgr_service_test/BUILD.gn
@@ -44,6 +44,7 @@ ohos_moduletest("AmsAppMgrServiceModuleTest") {
     "ffrt:libffrt",
     "hicollie:libhicollie",
     "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
   ]
