--- a/test/moduletest/common/ams/ipc_ams_mgr_test/BUILD.gn
+++ b/test/moduletest/common/ams/ipc_ams_mgr_test/BUILD.gn
@@ -47,6 +47,7 @@ ohos_moduletest("AmsIpcAmsmgrModuleTest") {
     "ffrt:libffrt",
     "hicollie:libhicollie",
     "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
   ]
