--- a/test/moduletest/common/ams/service_start_process_test/BUILD.gn
+++ b/test/moduletest/common/ams/service_start_process_test/BUILD.gn
@@ -41,6 +41,7 @@ ohos_moduletest("AmsServiceStartModuleTest") {
     "ffrt:libffrt",
     "hicollie:libhicollie",
     "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
   ]
