--- a/test/moduletest/common/ams/app_recent_list_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_recent_list_test/BUILD.gn
@@ -41,6 +41,7 @@ ohos_moduletest("AmsAppRecentListModuleTest") {
     "ffrt:libffrt",
     "hicollie:libhicollie",
     "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "napi:ace_napi",
     "safwk:system_ability_fwk",
