--- a/test/moduletest/common/ams/app_service_flow_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_service_flow_test/BUILD.gn
@@ -43,6 +43,7 @@ ohos_moduletest("AmsAppServiceFlowModuleTest") {
     "ffrt:libffrt",
     "hicollie:libhicollie",
     "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "napi:ace_napi",
     "safwk:system_ability_fwk",
