Add trace for BundleMgr interface
Signed-off-by: wangzhen <wangzhen346@huawei.com>
Change-Id: I734d21f0f08629665b1932bd947bd51238478b08

--- a/frameworks/native/appkit/BUILD.gn
+++ b/frameworks/native/appkit/BUILD.gn
@@ -443,6 +443,7 @@ ohos_shared_library("appkit_manager_helper") {
     "bundle_framework:libappexecfwk_common",
     "c_utils:utils",
     "hilog:libhilog",
+    "hitrace:hitrace_meter",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
   ]
