--- a/services/abilitymgr/resource/ams_service_config.json
+++ b/services/abilitymgr/resource/ams_service_config.json
@@ -13,5 +13,6 @@
     },
     "system_configuration":{
         "system_orientation": "vertical"
-    }
+    },
+    "safe_uri_permission": false
 }
