引入build/ohos.gni
Signed-off-by: 陈明星 <chenmingxing4@huawei.com>

--- a/ability_runtime.gni
+++ b/ability_runtime.gni
@@ -11,6 +11,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+import("//build/ohos.gni")
+
 ability_runtime_path = "//foundation/ability/ability_runtime"
 ability_runtime_napi_path = "${ability_runtime_path}/frameworks/js/napi"
 ability_base_path = "//foundation/ability/ability_base"
